--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
             <a class="navbar-brand" href="#">Hello!</a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="stirling-engine-main.html">Stirling Engine</a>
+                    <a class="nav-link" href="stirling-engine/index.html">Stirling Engine</a>
                 </li>
             </ul>
         </nav>
+        WIP
       </body>
 </html>
