--- a/stirling-engine/index.html
+++ b/stirling-engine/index.html
@@ -13,39 +13,29 @@
 
     <link href="style.css", rel="stylesheet">
 
-    <title>Physics</title>
+    <title>Stirling Engine</title>
   </head>
-  <body>
+  <body class="vh-100">
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow-lg p-4">
         <a class="navbar-brand" href="#">Stirling Engine</a>
     </nav>
     <div class="p-5"></div>
-    <div class="container-fluid pt-5">
-        <div class="row">
-            <div class="col-md-3 ps-5 pe-4">
-                <div class="shadow rounded hover-shade bg-white">
-                    <img src="robot.JPG" class="croppable img-fluid rounded-top">
-                    <div class="text-center p-3">
-                        <h5>test text</h5>
+    <div class="container-fluid p-5 h-100">
+        <div class="row pb-5 h-50">
+            <div class="col-md-3 px-4 h-100">
+                <a href="template/template.html">
+                    <div class="shadow rounded hover-shade bg-white h-100">
+                        <div class="crop-wrapper rounded-top h-75">
+                            <img src="template/templateImgTitle.JPG" class="fill-y">
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center fs-5 h-25">
+                            Template
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-md-3 ps-4 pe-4">
-                <div class=" shadow rounded p-3">
-                    hi
-                </div>
-            </div>
-            <div class="col-md-3 ps-4 pe-4">
-                <div class=" shadow rounded p-3">
-                    hi
-                </div>
-            </div>
-            <div class="col-md-3 ps-4 pe-5">
-                <div class=" shadow rounded p-3">
-                    hi
-                </div>
+                </a>
             </div>
         </div>
     </div>
+    <div class="p-3 bg-dark text-light"></div>
   </body>
 </html>
