--- a/stirling-engine/index.html
+++ b/stirling-engine/index.html
@@ -13,23 +13,28 @@
 
     <link href="style.css", rel="stylesheet">
 
-    <title>Stirling Engine</title>
+    <title>Stirling Engine Project</title>
   </head>
-  <body class="vh-100">
+  <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow-lg p-4">
-        <a class="navbar-brand" href="#">Stirling Engine</a>
+        <a class="navbar-brand" href="#">Stirling Engine Project</a>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#entries1-4">1-4</a>
+            </li>
+        </ul>
     </nav>
     <div class="p-5"></div>
-    <div class="container-fluid p-5 h-100">
-        <div class="row pb-5 h-50">
-            <div class="col-md-3 px-4 h-100">
-                <a href="template/template.html">
-                    <div class="shadow rounded hover-shade bg-white h-100">
+    <div class="container-fluid p-5 min-vh-100">
+        <div class="row pb-5" id="entries1-4">
+            <div class="col-md-3 px-4">
+                <a href="entry1/entry1.html">
+                    <div class="shadow rounded hover-shade bg-white vh-35">
                         <div class="crop-wrapper rounded-top h-75">
-                            <img src="template/templateImgTitle.JPG" class="fill-y">
+                            <img src="entry1/entry1ImgTitle.png" class="fill-x">
                         </div>
                         <div class="d-flex justify-content-center align-items-center fs-5 h-25">
-                            Template
+                            Entry 1: Brainstorming
                         </div>
                     </div>
                 </a>
