--- a/stirling-engine/entry1/entry1.html
+++ b/stirling-engine/entry1/entry1.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow-lg p-4">
-        <a class="navbar-brand" href="../index.html">Stirling Engine Project</a>
+        <a class="navbar-brand" href="../index.html">The Stirling Engine Project</a>
     </nav>
     <div class="p-5"></div>
     <div class="container-fluid pt-5">
@@ -94,6 +94,7 @@
                         <li>Need to source materials</li>
                         <li>Small, delicate parts may be hard to fabricate (I do have a mini hobbyist CNC router, so it might be able to handle some of these parts)</li>
                     </ul>
+                    <br>
                 </div>
             </div>
         </div>
