--- a/stirling-engine/index.html
+++ b/stirling-engine/index.html
@@ -13,11 +13,11 @@
 
     <link href="style.css", rel="stylesheet">
 
-    <title>Stirling Engine Project</title>
+    <title>The Stirling Engine Project</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark shadow-lg p-4">
-        <a class="navbar-brand" href="#">Stirling Engine Project</a>
+        <a class="navbar-brand" href="#">The Stirling Engine Project</a>
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="#entries1-4">1-4</a>
@@ -26,6 +26,7 @@
     </nav>
     <div class="p-5"></div>
     <div class="container-fluid p-5 min-vh-100">
+        Sorry for the delay in posting! I just got through a backlog of posts that were written but not uploaded :)<br><br><br><br>
         <div class="row pb-5" id="entries1-4">
             <div class="col-md-3 px-4">
                 <a href="entry1/entry1.html">
@@ -35,6 +36,42 @@
                         </div>
                         <div class="d-flex justify-content-center align-items-center fs-5 h-25">
                             Entry 1: Brainstorming
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 px-4">
+                <a href="entry2/entry2.html">
+                    <div class="shadow rounded hover-shade bg-white vh-35">
+                        <div class="crop-wrapper rounded-top h-75">
+                            <img src="entry2/entry2ImgTitle.png" class="fill-y">
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center fs-5 h-25">   
+                            Entry 2: Commenting
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 px-4">
+                <a href="entry3/entry3.html">
+                    <div class="shadow rounded hover-shade bg-white vh-35">
+                        <div class="crop-wrapper rounded-top h-75">
+                            <img src="entry3/entry3ImgTitle.png" class="fill-x">
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center fs-5 h-25">
+                            Entry 3: Feedback
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 px-4">
+                <a href="entry4/entry4.html">
+                    <div class="shadow rounded hover-shade bg-white vh-35">
+                        <div class="crop-wrapper rounded-top h-75">
+                            <img src="entry4/entry4ImgTitle.gif" class="fill-y">
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center fs-5 h-25">
+                            Entry 4: Stirling It Up
                         </div>
                     </div>
                 </a>
