--- a/stirling-engine/entry2/entry2.html
+++ b/stirling-engine/entry2/entry2.html
@@ -28,7 +28,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-8 offset-md-2 pt-4">
-                        <img src="entry2ImgTitle.jpg" class="fill-x">
+                        <img src="entry2ImgTitle.png" class="fill-x">
                     </div>
                 </div>
                 <div class="py-5">
