--- a/stirling-engine/index.html
+++ b/stirling-engine/index.html
@@ -22,11 +22,13 @@
             <li class="nav-item">
                 <a class="nav-link" href="#entries1-4">1-4</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#entries5-8">5-8</a>
+            </li>
         </ul>
     </nav>
     <div class="p-5"></div>
     <div class="container-fluid p-5 min-vh-100">
-        Sorry for the delay in posting! I just got through a backlog of posts that were written but not uploaded :)<br><br><br><br>
         <div class="row pb-5" id="entries1-4">
             <div class="col-md-3 px-4">
                 <a href="entry1/entry1.html">
@@ -72,6 +74,20 @@
                         </div>
                         <div class="d-flex justify-content-center align-items-center fs-5 h-25">
                             Entry 4: Stirling It Up
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="row pb-5" id="entries5-8">
+            <div class="col-md-3 px-4">
+                <a href="entry5/entry5.html">
+                    <div class="shadow rounded hover-shade bg-white vh-35">
+                        <div class="crop-wrapper rounded-top h-75">
+                            <img src="entry5/entry5ImgTitle.png" class="fill-x">
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center fs-5 h-25">
+                            Entry 5: General Design
                         </div>
                     </div>
                 </a>
