Entry 5 Video Centering

--- a/stirling-engine/entry5/entry5.html
+++ b/stirling-engine/entry5/entry5.html
@@ -62,17 +62,13 @@
                     <br>
                     To get a better, more practical idea of how I could construct an engine, I did a bit of research — these two are probably the most relevant examples of homemade Alpha type Stirling engines I could find:<br>
                     <br>
-                    <div class="row">
-                        <div class="col-md-6 offset-md-3 py-2">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/ogeYcS3o7cU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-                    </div>
+                    <center>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/ogeYcS3o7cU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </center>
                     <br>
-                    <div class="row">
-                        <div class="col-md-6 offset-md-3 py-2">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/uwVDpKtBNsk?start=10" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-                    </div>
+                    <center>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/uwVDpKtBNsk?start=10" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </center>
                     <br>
                     I don’t have access to the more advanced manufacturing techniques used in both of those videos, such as welding, so my design will look quite different. I plan on switching things up a bit and mounting my flywheel parallel to the ground, with both pistons facing sideways (so piston rod direction of motion = parallel to the ground). This will make it easier to support my cylinders and flywheel. I’ll delve deeper into design specifics in later posts. The next step for me in this project is to make some simplified mathematical models of the forces/pressure/energy in the engine so that I can make more informed, specific design choices.<br>
                     <br>
