Entry 6 semi-creation

--- a/stirling-engine/entry4/entry4.html
+++ b/stirling-engine/entry4/entry4.html
@@ -90,7 +90,7 @@
                     </div>
                     <br>
                     <b>Configuration 3:</b><br>
-                    In this configuration, the heat sink cylinder has started to retract, and the heat source cylinder has just retracted to its minimum volume. The retraction of the heat sink cylinder is being powered by the contraction of the fluid, due to the external environment absorbing energy from it. The retraction of the heat source piston is being powered by momentum in the flywheel from the previous configuration, and by the retraction of the heat sink piston.<br>
+                    In this configuration, the heat sink piston has started to retract, and the heat source cylinder has just retracted to its minimum volume. The retraction of the heat sink cylinder is being powered by the contraction of the fluid, due to the external environment absorbing energy from it. The retraction of the heat source piston is being powered by momentum in the flywheel from the previous configuration, and by the retraction of the heat sink piston.<br>
                     <br>
                     <div class="row">
                         <div class="col-md-4 offset-md-4 py-2">
@@ -118,6 +118,12 @@
                             </div>
                         </div>
                     </div>
+                    <br>
+                    <b><u>Sources Consulted</u></b><br>
+                    <br>
+                    Keveney, M. “Animated Engines.” Animated Engines - Two Cylinder Stirling, animatedengines.com/vstirling.html.<br>
+                    NMRI - Types of Stirling Engines. www.nmri.go.jp/oldpages/eng/khirata/stirling/type/type00_e.html.<br>
+                    “Stirling Engine Regenerators – Explained.” Stirling Engines, www.stirlingengine.com/regenerators/.<br>
                     <br>
                 </div>
             </div>
