--- a/stirling-engine/index.html
+++ b/stirling-engine/index.html
@@ -92,6 +92,19 @@
                     </div>
                 </a>
             </div>
+            <div class="row pb-5" id="entries5-8">
+                <div class="col-md-3 px-4">
+                    <a href="entry6/entry6.html">
+                        <div class="shadow rounded hover-shade bg-white vh-35">
+                            <div class="crop-wrapper rounded-top h-75">
+                                <img src="entry5/entry5ImgTitle.png" class="fill-x">
+                            </div>
+                            <div class="d-flex justify-content-center align-items-center fs-5 h-25">
+                                Entry 6: Piston Stroke Efficiency
+                            </div>
+                        </div>
+                    </a>
+                </div>
         </div>
     </div>
     <div class="p-3 bg-dark text-light"></div>
