Entry 6 semi-semi-creation

--- a/stirling-engine/entry6/entry6.html
+++ b/stirling-engine/entry6/entry6.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="py-5">
-                    Page under construction... check back soon!
+                    Will be updated very very shortly!
                 </div>
             </div>
         </div>
