--- a/stirling-engine/entry6/entry6.html
+++ b/stirling-engine/entry6/entry6.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <div class="text-center pb-4">
-                    <h1>General Design</h1>
+                    <h1>Piston Stroke Efficiency</h1>
                 </div>
                 <div class="row">
                     <div class="col-md-8 offset-md-2 pt-4">
@@ -32,7 +32,8 @@
                     </div>
                 </div>
                 <div class="py-5">
-                    Will be updated very very shortly!
+                    Page not updated yet because it's late and I'm tired (I'll update it in the morning), but until then the post can be found at the bottom of this Google Doc (open with PDSB account):<br>
+                    <a href=https://docs.google.com/document/d/1xVURq8BzPXHg9XGr69rx1iLfoLi2fsRwdOabu7NEW00/edit?usp=sharing>https://docs.google.com/document/d/1xVURq8BzPXHg9XGr69rx1iLfoLi2fsRwdOabu7NEW00/edit?usp=sharing</a>
                 </div>
             </div>
         </div>
