--- a/stirling-engine/entry6/entry6.html
+++ b/stirling-engine/entry6/entry6.html
@@ -32,7 +32,7 @@
                     </div>
                 </div>
                 <div class="py-5">
-                    Page not updated yet because it's late and I'm tired (I'll update it in the morning), but until then the post can be found at the bottom of this Google Doc (open with PDSB account):<br>
+                    Page not updated yet because it's late and I should sleep (I'll update it in the morning), but until then the post can be found at the bottom of this Google Doc (open with PDSB account):<br>
                     <a href=https://docs.google.com/document/d/1xVURq8BzPXHg9XGr69rx1iLfoLi2fsRwdOabu7NEW00/edit?usp=sharing>https://docs.google.com/document/d/1xVURq8BzPXHg9XGr69rx1iLfoLi2fsRwdOabu7NEW00/edit?usp=sharing</a>
                 </div>
             </div>
