Entry 6 index link update

--- a/stirling-engine/index.html
+++ b/stirling-engine/index.html
@@ -96,7 +96,7 @@
                 <a href="entry6/entry6.html">
                     <div class="shadow rounded hover-shade bg-white vh-35">
                         <div class="crop-wrapper rounded-top h-75">
-                            <img src="entry5/entry5ImgTitle.png" class="fill-x">
+                            <img src="entry6/entry6ImgTitle.png" class="fill-y">
                         </div>
                         <div class="d-flex justify-content-center align-items-center fs-5 h-25">
                             Entry 6: Piston Stroke Efficiency
