--- a/stirling-engine/entry6/entry6.html
+++ b/stirling-engine/entry6/entry6.html
@@ -47,7 +47,7 @@
                     <br>
                     The coordinate system given in the above diagram is used in the following derivations.<br>
                     <br>
-                    Let \(θ\) represent the angle the flywheel has turned clockwise (as viewed in the diagram), with \(θ = 0\) being the position where the piston rod is perpendicular to the piston head<br>
+                    Let \(\theta\) represent the angle the flywheel has turned clockwise (as viewed in the diagram), with \(\theta = 0\) being the position where the piston rod is perpendicular to the piston head<br>
                     <br>
                     Let \(ℓ\) represent the length of the piston rod<br>
                     Let \(f\) represent the radius from the center of the flywheel to the point of connection of the piston rod<br>
@@ -64,7 +64,7 @@
                         </div>
                     </div>
                     <br>
-                    \(f · sin θ\) and \(ℓ\) are two sides of a right triangle. The ratio \(sin α\) in this triangle is given by \(f · sin θ \over ℓ\). Therefore: $$α = sin^{-1} {f · sin θ \over ℓ}$$
+                    \(f · sin \theta\) and \(ℓ\) are two sides of a right triangle. The ratio \(sin \alpha\) in this triangle is given by \(f · sin \theta \over ℓ\). Therefore: $$\alpha = sin^{-1} {f · sin \theta \over ℓ}$$
                     <br>
                     <div class="row">
                         <div class="col-md-2 offset-md-5 py-2">
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <br>
-                    If \(F_p\) is the force applied to the piston head, the component facing in the direction of \(ℓ\) will be \(F_ℓ\). Therefore: $$F_ℓ = F_p · cos α$$
+                    If \(F_p\) is the force applied to the piston head, the component facing in the direction of \(ℓ\) will be \(F_ℓ\). Therefore: $$F_ℓ = F_p · cos \alpha$$
                     <br>
                     Looking back at the diagram from before:<br>
                     <br>
@@ -84,7 +84,7 @@
                     <br>
                     We will now try to find the length \(d\) — the distance from the piston head to the center of the flywheel. This length is constantly changing as the flywheel rotates and the piston head moves.<br>
                     <br>
-                    \(d +  f · cos θ\) is one side of a right triangle, along with \(ℓ\) and \(f · sin θ\). This means that \(d +  f · cos θ\) is \(\sqrt{ℓ^2 - (f · sin θ)^2}\). So: $$d = \sqrt{ℓ^2 - (f · sin θ)^2} - f · cos θ$$
+                    \(d +  f · cos \theta\) is one side of a right triangle, along with \(ℓ\) and \(f · sin \theta\). This means that \(d +  f · cos \theta\) is \(\sqrt{ℓ^2 - (f · sin \theta)^2}\). So: $$d = \sqrt{ℓ^2 - (f · sin \theta)^2} - f · cos \theta$$
                     <br>
                     <div class="row">
                         <div class="col-md-4 offset-md-4 py-2">
@@ -92,7 +92,7 @@
                         </div>
                     </div>
                     <br>
-                    Taking a look at the diagram above, we can see that \(d\), \(ℓ\), and \(f\) form a triangle. This triangle contains the angle \(β\). Through the cosine law, we know that \(d^2 = ℓ^2 + f^2 - 2dℓ · cos β\). Rearranging this, we find that \(cos β = {ℓ^2 + f^2 - d^2 \over 2ℓf}\), and so: $$β = cos^{-1} {ℓ^2 + f^2 - d^2 \over 2ℓf}$$
+                    Taking a look at the diagram above, we can see that \(d\), \(ℓ\), and \(f\) form a triangle. This triangle contains the angle \(\beta\). Through the cosine law, we know that \(d^2 = ℓ^2 + f^2 - 2dℓ · cos \beta\). Rearranging this, we find that \(cos \beta = {ℓ^2 + f^2 - d^2 \over 2ℓf}\), and so: $$\beta = cos^{-1} {ℓ^2 + f^2 - d^2 \over 2ℓf}$$
                     <br>
                     <div class="row">
                         <div class="col-md-4 offset-md-4 py-2">
@@ -100,8 +100,8 @@
                         </div>
                     </div>
                     <br>
-                    If the piston rod is pushed with a force of \(F_ℓ\), the component that will contribute to the flywheel’s motion is \(F_f\). Therefore, it seems that \(F_f = F_ℓ · sin β\). However, it is important to note that when \(θ\) is between 0 and π, a positive force applied by the piston head will contribute to the flywheel’s motion in the negative direction. 
-                    Likewise, when \(θ\) is between π and 2π, a positive force applied by the piston head will contribute to the flywheel’s motion in the positive direction. To represent this relationship, we will need to multiply our expression for force by -1 over the interval \(0 ≤ θ < π\), and by 1 over the interval \(π ≤ θ < 2π\). Multiplying by \(-{|sin θ| \over sin θ}\) will achieve this effect. Therefore: $$F_f = -F_ℓ · sin β · {|sin θ| \over sin θ}$$
+                    If the piston rod is pushed with a force of \(F_ℓ\), the component that will contribute to the flywheel’s motion is \(F_f\). Therefore, it seems that \(F_f = F_ℓ · sin \beta\). However, it is important to note that when \(\theta\) is between 0 and π, a positive force applied by the piston head will contribute to the flywheel’s motion in the negative direction. 
+                    Likewise, when \(\theta\) is between π and 2π, a positive force applied by the piston head will contribute to the flywheel’s motion in the positive direction. To represent this relationship, we will need to multiply our expression for force by -1 over the interval \(0 ≤ \theta < \pi\), and by 1 over the interval \(\pi ≤ \theta < 2\pi\). Multiplying by \(-{|sin \theta| \over sin \theta}\) will achieve this effect. Therefore: $$F_f = -F_ℓ · sin \beta · {|sin \theta| \over sin \theta}$$
                     <br>
                     <div class="row">
                         <div class="col-md-6 offset-md-3 py-2">
@@ -110,17 +110,17 @@
                     </div>
                     <br>
                     To summarize:<br>
-                    $$d = \sqrt{ℓ^2 - (f · sin θ)^2} - f · cos θ$$
-                    $$α = sin^{-1} {f · sin θ \over ℓ}$$
-                    $$β = cos^{-1} {ℓ^2 + f^2 - d^2 \over 2ℓf}$$
+                    $$d = \sqrt{ℓ^2 - (f · sin \theta)^2} - f · cos \theta$$
+                    $$\alpha = sin^{-1} {f · sin \theta \over ℓ}$$
+                    $$\beta = cos^{-1} {ℓ^2 + f^2 - d^2 \over 2ℓf}$$
 
-                    $$F_ℓ = F_p · cos α$$
-                    $$F_f = -F_ℓ · sin β · {|sin θ| \over sin θ}$$
+                    $$F_ℓ = F_p · cos \alpha$$
+                    $$F_f = -F_ℓ · sin \beta · {|sin \theta| \over sin \theta}$$
 
                     Combining equations:
-                    $$F_f = -F_p · cos α · sin β · {|sin θ| \over sin θ}$$
+                    $$F_f = -F_p · cos \alpha · sin \beta · {|sin \theta| \over sin \theta}$$
                     <br>
-                    We do not yet have a value for \(F_p\) or \(F_f\), so this equation cannot be solved. However, we can solve for the ratio \(Fp \over Ff\) to find the proportion of the force applied by the piston that is felt by the flywheel. Since the only variable in these equations is \(θ\) (the rest are constants), we can plot this proportion as a function of \(θ\). This gives us a relationship between flywheel angle, and the proportion of useful force felt by the flywheel.<br>
+                    We do not yet have a value for \(F_p\) or \(F_f\), so this equation cannot be solved. However, we can solve for the ratio \(Fp \over Ff\) to find the proportion of the force applied by the piston that is felt by the flywheel. Since the only variable in these equations is \(\theta\) (the rest are constants), we can plot this proportion as a function of \(\theta\). This gives us a relationship between flywheel angle, and the proportion of useful force felt by the flywheel.<br>
                     <br>
                     Doing so, we find the following graph:<br>
                     <br>
@@ -130,9 +130,9 @@
                         </div>
                     </div>
                     <br>
-                    This looks pretty cool! It also appears to model force transmission correctly — we can do a quick mental check to see that at \(θ = 0\) and \(θ = π/2\), the piston rod cannot apply any useful force to the flywheel (this makes sense because at these points, the rod is collinear with the flywheel’s radius — and so it cannot apply any force perpendicular to the circle’s radius).<br>
+                    This looks pretty cool! It also appears to model force transmission correctly — we can do a quick mental check to see that at \(\theta = 0\) and \(\theta = {\pi \over 2}\), the piston rod cannot apply any useful force to the flywheel (this makes sense because at these points, the rod is collinear with the flywheel’s radius — and so it cannot apply any force perpendicular to the circle’s radius).<br>
                     <br>
-                    Using a similar process, we can find the equations that describe force transmission for the second piston. The angle \(θ\) is shifted by \(π \over 2\) from the perspective of this piston. I won’t go through every step of the derivation here, since the process is so similar to the derivation for the first piston. Rather, this proof is left as an exercise to the reader ;)<br>
+                    Using a similar process, we can find the equations that describe force transmission for the second piston. The angle \(\theta\) is shifted by \(\pi \over 2\) from the perspective of this piston. I won’t go through every step of the derivation here, since the process is so similar to the derivation for the first piston. Rather, this proof is left as an exercise to the reader ;)<br>
                     <br>
                     <div class="row">
                         <div class="col-md-6 offset-md-3 py-2">
@@ -141,15 +141,15 @@
                     </div>
                     <br>
                     For the second piston, redefining all variables to refer to the above diagram:<br>
-                    $$d = \sqrt{ℓ^2 - (f · cos θ)^2} + f · sin θ$$
-                    $$α = sin^{-1} {f · cos θ \over ℓ}$$
-                    $$β = cos^{-1} {ℓ^2 + f^2 - d^2 \over 2ℓf}$$
+                    $$d = \sqrt{ℓ^2 - (f · cos \theta)^2} + f · sin \theta$$
+                    $$\alpha = sin^{-1} {f · cos \theta \over ℓ}$$
+                    $$\beta = cos^{-1} {ℓ^2 + f^2 - d^2 \over 2ℓf}$$
 
-                    $$F_ℓ = F_p · cos α$$
-                    $$F_f = -F_ℓ · sin β · {|cos θ| \over cos θ}$$
+                    $$F_ℓ = F_p · cos \alpha$$
+                    $$F_f = -F_ℓ · sin \beta · {|cos \theta| \over cos \theta}$$
 
                     Combining equations:
-                    $$F_f = -F_p · cos α · sin β · {|cos θ| \over cos θ}$$
+                    $$F_f = -F_p · cos \alpha · sin \beta · {|cos \theta| \over cos \theta}$$
                     <br>
                     Don’t worry, I’ll redefine unique variable names in future posts to refer to each individual piston so the variable names aren’t shared like this — since we’re only focusing on one piston at a time in this post, I didn’t feel it was necessary to be so specific.<br>
                     <br>
@@ -164,8 +164,8 @@
                     Once again, not only does it look pretty neat, it also checks out theoretically!<br>
                     <br>
                     This Desmos graph used to plot these values can be found here:<br>
-                    <u><a href="https://www.desmos.com/calculator/dzb0lnbckm">Stirling Engine Parameters - Desmos</a></u><br>
-                    More equations describing other systems in the engine will be added to this graph in future posts. In the next post, we will look at pressure in the engine as a function of \(θ\).
+                    <a href="https://www.desmos.com/calculator/x5hilqnphk" class="link-primary">Stirling Engine Parameters - Desmos</a><br>
+                    More equations describing other systems in the engine will be added to this graph in future posts. In the next post, we will look at pressure in the engine as a function of \(\theta\).
                 </div>
             </div>
         </div>
