--- a/stirling-engine/entry7/entry7.html
+++ b/stirling-engine/entry7/entry7.html
@@ -171,7 +171,7 @@
                         </div>
                     </div>
                     <br>
-                    This yields another pretty graph! The blue curve represents \(F_c\), and the orange curve represents \(F_h\). Note that although these curves appear to be vertically symmetrical, ignoring the phase shift, they actually aren’t — in general, the flywheel actually appears to experience greater positive forces than negative ones.<br>
+                    This yields another pretty graph! The purple curve represents \(F_c\), and the orange curve represents \(F_h\). Note that although these curves appear to be vertically symmetrical, ignoring the phase shift, they actually aren’t — in general, the flywheel actually appears to experience greater positive forces than negative ones.<br>
                     <br>
                     We will investigate this further in the next post, when we take a look at how these forces impart energy to the flywheel.<br>
                     <br>
