--- a/stirling-engine/index.html
+++ b/stirling-engine/index.html
@@ -25,6 +25,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#entries5-8">5-8</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#entries9-12">9-12</a>
+            </li>
         </ul>
     </nav>
     <div class="p-5"></div>
@@ -112,6 +115,56 @@
                         </div>
                         <div class="d-flex justify-content-center align-items-center fs-5 h-25">
                             Entry 7: Under Pressure
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 px-4">
+                <a href="entry8/entry8.html">
+                    <div class="shadow rounded hover-shade bg-white vh-35">
+                        <div class="crop-wrapper rounded-top h-75">
+                            <img src="entry8/entry8ImgTitle.png" class="fill-y">
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center fs-5 h-25">
+                            Entry 8: Pretty Fly for a Flywheel
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="row pb-5" id="entries9-12">
+            <div class="col-md-3 px-4">
+                <a href="entry9/entry9.html">
+                    <div class="shadow rounded hover-shade bg-white vh-35">
+                        <div class="crop-wrapper rounded-top h-75">
+                            <img src="entry9/entry9ImgTitle.png" class="fill-x">
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center fs-5 h-25">
+                            Entry 9: Engine Design
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 px-4">
+                <a href="entry10/entry10.html">
+                    <div class="shadow rounded hover-shade bg-white vh-35">
+                        <div class="crop-wrapper rounded-top h-75">
+                            <img src="entry10/entry10ImgTitle.png" class="fill-x">
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center fs-5 h-25">
+                            Entry 10: Piston Head Instability
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-3 px-4">
+                <a href="entry11/entry11.html">
+                    <div class="shadow rounded hover-shade bg-white vh-35">
+                        <div class="crop-wrapper rounded-top h-75">
+                            <img src="entry11/entry11ImgTitle.jpg" class="fill-x">
+                        </div>
+                        <div class="d-flex justify-content-center align-items-center fs-5 h-25">
+                            Entry 11: Progress and Setbacks
                         </div>
                     </div>
                 </a>
